--- a/ANDROID_FOUCRIER_PLAISANT/app/build.gradle
+++ b/ANDROID_FOUCRIER_PLAISANT/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.example.ocane.android_foucrier_plaisant"
+        applicationId "dev.android_foucrier_plaisant"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
