--- a/ANDROID_FOUCRIER_PLAISANT/app/src/main/AndroidManifest.xml
+++ b/ANDROID_FOUCRIER_PLAISANT/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.ocane.android_foucrier_plaisant" >
+    package="dev.android_foucrier_plaisant" >
 
     <application
         android:allowBackup="true"
@@ -8,6 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
+        <activity android:name=".Settings"/>
         <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
